--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,6 @@ commands:
   player:
     description: Информация о игроке
     aliases: [p]
+  decreasestrength:
+    description: Уменьшить силу игрока на 5
+    usage: /decreasestrength
