--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,6 @@ commands:
   player:
     description: Информация о игроке
     aliases: [p]
+  clanchat:
+    description: Написать сообщение в чат клана
+    aliases: [cc]
