--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,7 @@ commands:
   clanchat:
     description: Написать сообщение в чат клана
     aliases: [cc]
+  menu:
+    description: Открыть меню
+  clanmenu:
+    description: Открыть меню Клановы
