--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,3 +21,5 @@ commands:
     description: Открыть меню
   clanmenu:
     description: Открыть меню Клановы
+  chunkmap:
+    description: Открыть карту чанков
