--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,3 +23,10 @@ commands:
     description: Открыть меню Клановы
   chunkmap:
     description: Открыть карту чанков
+  setSt:
+    permission: setSt.op
+
+permissions:
+  setSt.op:
+    description: Allows setSt command
+    default: op
