--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'org.flomik'
@@ -37,7 +38,19 @@ dependencies {
 
     compileOnly 'me.clip:placeholderapi:2.11.6'
 
+    // implementation 'com.mysql:mysql-connector-j:8.0.33'
+    // implementation 'com.zaxxer:HikariCP:5.0.1'
+
+    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
+
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7' // Vault API
+
+    implementation 'com.mojang:authlib:1.5.25'
+}
+
+tasks {
+    shadowJar {
+    }
 }
 
 def targetJavaVersion = 17
