--- a/src/main/resources/shrines.yml
+++ b/src/main/resources/shrines.yml
@@ -17,6 +17,7 @@ shrines:
   locations: [] # Список местоположений Святилищ в формате world,x,y,z.
 
 messages:
+  start: ""
   capture-success: "&aКлан &e{clan}&a захватил Святилище Опыта!"
   capture-start: "&aВаш клан начал захват Святилища Опыта. Не покидайте территорию в течение 2 минут."
   capture-success-reward: "&aВаш клан захватил Святилище Опыта и получил {clan_xp} очков кланового опыта!"
