--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -36,6 +36,9 @@ commands:
   castle:
     description: Управление замком
     permission: op
+  startcapture:
+    description: Захват территории
+    permission: op
 
 permissions:
   clan.op:
